# Process-Scheduling-

./: CMakeLists.txt  README.md  main.c
CPU Scheduling Algorithms/FIFO/: FIFO.c  FIFO.h
CPU Scheduling Algorithms/Multilevel/: MultiLevel.c  MultiLevel.h
CPU Scheduling Algorithms/Priority/: Priority.c  Priority.h
CPU Scheduling Algorithms/RR/: RR.c  RR.h
CPU Scheduling Algorithms/SRT/: SRT.c  SRT.h
GanttChart/: GanttChart.c  GanttChart.h
Queue/: QueueManipulation.c  QueueManipulation.h
